--- a/MvcApplication1/Views/Shared/_Layout.cshtml
+++ b/MvcApplication1/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         <div class="navbar-inner">
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
                 class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-            </a><a class="brand" href="/Home">Learning Bootstrap and Membership</a>
+            </a><a class="brand" href="/Home">Welcome Learning Bootstrap and Membership</a>
             <ul class="nav">
                 <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
